Preload screen button redesign

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="text">
                     Продолжить
                 </div>
+                <div class="border"></div>
                 <div class="symbol">
                     <i class="far fa-arrow-alt-circle-right"></i>
                 </div>
